--- a/mbs.html
+++ b/mbs.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/3.css">
     <link rel="stylesheet" href="css/4.css">
+    <link rel="stylesheet" href="css/xia.css">
 
 
 </head>
@@ -47,52 +48,107 @@
         </a>
     </div>
 
-    
-        <div class="meta-links">
-            <div class="meta-link">
-                <div class="icon-1"></div>
-                <div class="text">
-                    <h4>微信小程序</h4>
-                    <p>微信扫一扫，直接用车</p>
 
-                </div>
+    <div class="meta-links">
+        <div class="meta-link">
+            <div class="icon-1"></div>
+            <div class="text">
+                <h4>微信小程序</h4>
+                <p>微信扫一扫，直接用车</p>
+
+            </div>
+        </div>
+
+
+        <div class="meta-link">
+            <div class="icon-2"></div>
+            <div class="text">
+                <h4>红包车</h4>
+                <p>骑摩拜，能赚钱</p>
+            </div>
+
+        </div>
+        <div class="meta-link">
+            <div class="icon-3"></div>
+            <div class="text">
+                <h4>模范分</h4>
+                <p>文明骑行，信用生活</p>
+
             </div>
 
 
-            <div class="meta-link">
-                <div class="icon-2"></div>
-                <div class="text">
-                    <h4>红包车</h4>
-                    <p>骑摩拜，能赚钱</p>
-                </div>
+        </div>
+
+    </div>
+
+    <div class="container">
+        <ul class="main-links">
+            <div class="pic">
 
             </div>
-            <div class="meta-link">
-                <div class="icon-3"></div>
-                <div class="text">
-                    <h4>模范分</h4>
-                    <p>文明骑行，信用生活</p>
+            <li>Beijing Mobike Technology Co., Ltd</li>
+            <li>客服电话 400-618-7799</li>
+            <li>北京摩拜科技</li>
+        </ul>
+        <div class="fonter list">
+            <div class="font lists-1">
 
-                </div>
-
-
-
-
-
-
-
+                <ul>
+                    <li>
+                        <h3>产品</h3>
+                    </li>
+                    <li>经典版</li>
+                    <li>轻骑行</li>
+                    <li>智能锁</li>
+                </ul>
 
             </div>
+            <div class="font lists-2">
+
+                <ul>
+                    <li>
+                        <h3>产品</h3>
+                    </li>
+                    <li>经典版</li>
+                    <li>轻骑行</li>
+                    <li>智能锁</li>
+                </ul>
+
+            </div>
+            <div class="font lists-3">
+
+                <ul>
+                    <li>
+                        <h3>产品</h3>
+                    </li>
+                    <li>经典版</li>
+                    <li>轻骑行</li>
+                    <li>智能锁</li>
+                </ul>
+
+            </div>
+            <div class="font lists-4">
+
+                <ul>
+                    <li>
+                        <h3>产品</h3>
+                    </li>
+                    <li>经典版</li>
+                    <li>轻骑行</li>
+                    <li>智能锁</li>
+                </ul>
+
+            </div>
+
+
 
 
 
 
         </div>
+    </div>
 
-
-
-
-
+    </div>
 
 
     <script src="swiper.min.js"></script>
@@ -103,12 +159,10 @@
             autoplay: true,
 
 
-
-
-
         })
     </script>
 </body>
+
 
 </body>
 
